package server

import (
	"context"
	"fmt"

	pb "github.com/mnohosten/laura-db/pkg/cluster/proto"
)

// RouterServiceImpl implements the RouterService gRPC service
type RouterServiceImpl struct {
	pb.UnimplementedRouterServiceServer
	pb.UnimplementedConfigServiceServer
}

// NewRouterServiceImpl creates a new router service implementation
func NewRouterServiceImpl() *RouterServiceImpl {
	return &RouterServiceImpl{}
}

// Query routes a query to the appropriate shard(s)
func (s *RouterServiceImpl) Query(ctx context.Context, req *pb.QueryRequest) (*pb.QueryResponse, error) {
	// TODO: Implement query routing
	fmt.Printf("Query request: db=%s collection=%s\n", req.Database, req.Collection)

	return &pb.QueryResponse{
		RequestId:     req.RequestId,
		Documents:     [][]byte{},
		MoreAvailable: false,
		Stats: &pb.QueryStats{
			DocumentsExamined: 0,
			DocumentsReturned: 0,
			ExecutionTimeMs:   0,
			ShardsQueried:     []string{},
		},
	}, nil
}

// Insert inserts documents to the appropriate shard(s)
func (s *RouterServiceImpl) Insert(ctx context.Context, req *pb.InsertRequest) (*pb.InsertResponse, error) {
	// TODO: Implement insert routing
	fmt.Printf("Insert request: db=%s collection=%s count=%d\n",
		req.Database, req.Collection, len(req.Documents))

	return &pb.InsertResponse{
		RequestId:     req.RequestId,
		InsertedCount: int32(len(req.Documents)),
		Errors:        []*pb.InsertError{},
	}, nil
}

// Update updates documents across shard(s)
func (s *RouterServiceImpl) Update(ctx context.Context, req *pb.UpdateRequest) (*pb.UpdateResponse, error) {
	// TODO: Implement update routing
	fmt.Printf("Update request: db=%s collection=%s multi=%v\n",
		req.Database, req.Collection, req.Multi)

	return &pb.UpdateResponse{
		RequestId:      req.RequestId,
		MatchedCount:   0,
		ModifiedCount:  0,
		UpsertedCount:  0,
	}, nil
}

// Delete deletes documents from shard(s)
func (s *RouterServiceImpl) Delete(ctx context.Context, req *pb.DeleteRequest) (*pb.DeleteResponse, error) {
	// TODO: Implement delete routing
	fmt.Printf("Delete request: db=%s collection=%s multi=%v\n",
		req.Database, req.Collection, req.Multi)

	return &pb.DeleteResponse{
		RequestId:    req.RequestId,
		DeletedCount: 0,
	}, nil
}

// Aggregate executes an aggregation pipeline
func (s *RouterServiceImpl) Aggregate(ctx context.Context, req *pb.AggregationRequest) (*pb.AggregationResponse, error) {
	// TODO: Implement aggregation routing
	fmt.Printf("Aggregation request: db=%s collection=%s stages=%d\n",
		req.Database, req.Collection, len(req.Pipeline))

	return &pb.AggregationResponse{
		RequestId: req.RequestId,
		Results:   [][]byte{},
	}, nil
}

// GetShardMap returns the shard routing map for a collection
func (s *RouterServiceImpl) GetShardMap(ctx context.Context, req *pb.GetShardMapRequest) (*pb.GetShardMapResponse, error) {
	// TODO: Implement shard map retrieval
	fmt.Printf("GetShardMap request: db=%s collection=%s\n", req.Database, req.Collection)

	return &pb.GetShardMapResponse{
		Version:         1,
		Shards:          []*pb.ShardRouteInfo{},
		ShardKeyField:   "_id",
		Strategy:        pb.ShardingStrategy_HASH,
	}, nil
}

// AddShard adds a new shard to the cluster
func (s *RouterServiceImpl) AddShard(ctx context.Context, req *pb.AddShardRequest) (*pb.AddShardResponse, error) {
	// TODO: Implement shard addition
	fmt.Printf("AddShard request: shard_id=%s node_id=%s\n", req.ShardId, req.NodeId)

	return &pb.AddShardResponse{
		Success: true,
		Message: "shard added successfully",
	}, nil
}

// RemoveShard removes a shard from the cluster
func (s *RouterServiceImpl) RemoveShard(ctx context.Context, req *pb.RemoveShardRequest) (*pb.RemoveShardResponse, error) {
	// TODO: Implement shard removal
	fmt.Printf("RemoveShard request: shard_id=%s\n", req.ShardId)

	return &pb.RemoveShardResponse{
		Success: true,
		Message: "shard removed successfully",
	}, nil
}

// SplitChunk splits a chunk into two chunks
func (s *RouterServiceImpl) SplitChunk(ctx context.Context, req *pb.SplitChunkRequest) (*pb.SplitChunkResponse, error) {
	// TODO: Implement chunk splitting
	fmt.Printf("SplitChunk request: chunk_id=%s\n", req.ChunkId)

	return &pb.SplitChunkResponse{
		Success:      true,
		LeftChunkId:  req.ChunkId + "-left",
		RightChunkId: req.ChunkId + "-right",
	}, nil
}

// MigrateChunk migrates a chunk to another shard
func (s *RouterServiceImpl) MigrateChunk(ctx context.Context, req *pb.MigrateChunkRequest) (*pb.MigrateChunkResponse, error) {
	// TODO: Implement chunk migration
	fmt.Printf("MigrateChunk request: chunk_id=%s from=%s to=%s\n",
		req.ChunkId, req.FromShard, req.ToShard)

	return &pb.MigrateChunkResponse{
		Success:           true,
		DocumentsMigrated: 0,
	}, nil
}
